<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_guest_room_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="80dp"
                android:text="@string/lbl_guest_room_light" />

            <ToggleButton
                android:id="@+id/tb_guest_room_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:checked="true"
                android:textOff="@string/lbl_off"
                android:textOn="@string/lbl_on" />

            <Switch
                android:id="@+id/swt_door_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:checked="true"
                android:switchMinWidth="@dimen/door_lock_width"
                android:text="@string/lbl_door_lock"
                android:textOff="@string/door_lock_close"
                android:textOn="@string/door_lock_open" />

            <TextView
                android:id="@+id/lbl_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_brightness" />

            <SeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:indeterminate="false"
                android:max="500"
                android:progress="50" />

            <TextView
                android:id="@+id/lbl_how_much_you_love_the_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_how_much_you_love_the_room" />

            <RatingBar
                android:id="@+id/rb_how_much_you_love_the_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:numStars="5"
                android:rating="3.5" />

            <TextView
                android:id="@+id/lbl_shower_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/lbl_shower_loading" />

            <ProgressBar
                android:id="@+id/pb_shower_loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:indeterminate="true"
                android:max="100"
                android:minWidth="@dimen/shower_loading_pb_width"
                android:minHeight="@dimen/shower_loading_pb_height"
                android:progress="25" />


            <TextView
                android:id="@+id/lbl_lunch_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/lbl_lunch_selection" />


            <Spinner
                android:id="@+id/sp_lunch_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:entries="@array/lunch_selection" />

            <TextView
                android:id="@+id/lbl_additional_drinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/lbl_additional_drinks" />

            <AutoCompleteTextView
                android:id="@+id/actv_additional_drinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_card_medium_2" />

            <DatePicker
                android:id="@+id/dp_date_to_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginRight="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:datePickerMode="calendar"
                />

            <Button
                android:id="@+id/btn_select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_select_date"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                />

            <TextView
                android:id="@+id/tv_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_selected_date"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium_2"
                />

            <TimePicker
                android:id="@+id/tp_time_to_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginRight="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:timePickerMode="clock"
                />

            <Button
                android:id="@+id/btn_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_select_time"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                />

            <TextView
                android:id="@+id/tv_selected_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_selected_time"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium_2"
                />

            <TextView
                android:layout_width="fill_parent"
                android:id="@+id/text"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/txtCredits" />


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>